Message definitions, workers added

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -19,7 +19,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>tr.edu.boun.cmpe.scn.client.ServiceUpHandler</mainClass>
+                            <mainClass>tr.edu.boun.cmpe.scn.client.Test</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
