--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>controller</module>
         <module>client</module>
         <module>cli</module>
+        <module>service</module>
+        <module>api</module>
     </modules>
 
     <properties>
