--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>scn-api</artifactId>
+    <packaging>bundle</packaging>
 
     <build>
         <plugins>
