--- a/client/pom.xml
+++ b/client/pom.xml
@@ -11,6 +11,20 @@
 
     <artifactId>scn-client</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>scn</groupId>
+            <artifactId>scn-api</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.6.2</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -19,7 +33,8 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>tr.edu.boun.cmpe.scn.client.Test</mainClass>
+                            <mainClass>tr.edu.boun.cmpe.scn.client.TestInterest</mainClass>
+                            <mainClass>tr.edu.boun.cmpe.scn.client.Send</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
