--- a/api/pom.xml
+++ b/api/pom.xml
@@ -26,7 +26,7 @@
         </dependency>
     </dependencies>
 
-    <build>
+    <!--<build>
         <plugins>
             <plugin>
                 <groupId>org.jvnet.jaxb2.maven2</groupId>
@@ -47,13 +47,12 @@
 
                             <generateDirectory>src/main/java</generateDirectory>
                             <generatePackage>tr.edu.boun.cmpe.scn.api.message</generatePackage>
-                            <!--  Other configuration options-->
 
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-    </build>
+    </build>-->
 
 </project>
