--- a/client/pom.xml
+++ b/client/pom.xml
@@ -23,10 +23,11 @@
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-math3</artifactId>
-            <version>3.2</version>
+            <groupId>org.onosproject</groupId>
+            <artifactId>onlab-misc</artifactId>
+            <version>1.6.0</version>
         </dependency>
     </dependencies>
 
