--- a/service/pom.xml
+++ b/service/pom.xml
@@ -17,11 +17,15 @@
             <artifactId>scn-api</artifactId>
             <version>1.0</version>
         </dependency>
-
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.5</version>
         </dependency>
     </dependencies>
 
@@ -42,7 +46,8 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>tr.edu.boun.cmpe.scn.service.demo.Init</mainClass>
+                            <mainClass>tr.edu.boun.cmpe.scn.service.demo.Init
+                            </mainClass>
                         </manifest>
                     </archive>
                 </configuration>
