--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>cli</module>
         <module>service</module>
         <module>api</module>
+        <module>apps</module>
     </modules>
 
     <properties>
